refactored message bundle to classpath location