@@ -234,7 +234,7 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
-					<jvmArguments>--enable-preview</jvmArguments>
+<!--					<jvmArguments>&#45;&#45;enable-preview</jvmArguments>-->
 					<excludes>
 						<exclude>
 							<groupId>org.projectlombok</groupId>
